--- a/style.css
+++ b/style.css
@@ -257,11 +257,15 @@ section.flex-container-row > div > p {
 }
 
 .plan-container {
-    width: 30%;
+    width: 25%;
     min-width: 300px;
-    height: 400px;
+    min-height: 400px;
     gap: var(--sch-gap-m);
     background-color: white;
+}
+
+.plan-container:first-child {
+    opacity: 0.5;
 }
 
 .period {
@@ -281,7 +285,53 @@ section.flex-container-row > div > p {
     color: white;
 }
 
+.price-container > p {
+    font-weight: normal;
+    width: 100%;
+    text-align: center;
+    padding: var(--sch-padding-m);
+    font-size: var(--sch-font-size-xl);
+}
 
+.cents{
+    font-size: var(--sch-font-size-xs);;
+}
+
+.plan-container > ul {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    gap: var(--sch-gap-l);
+    padding: 0 var(--sch-padding-l);
+}
+
+.plan-container > ul > li {
+    padding: var(--sch-padding-s) 0;
+}
+
+.plan-button-container {
+    width: 100%;
+    text-align: center;
+    padding: var(--sch-padding-m);
+}
+
+.plan-button-container > button {
+    width: 50%;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.5s;
+    font-size: var(--sch-font-size-s);
+    padding: var(--sch-padding-s);
+    background-color: var(--sch-color-000);
+    color: var(--sch-color-sand-004);
+    border: 1px solid var(--sch-color-sand-004);
+    border-radius: var(--sch-border-radius-xl);
+}
+
+.plan-button-container > button:hover {
+    transform: scale(1.07);
+}
 
 /* FAQ */
 #faq {
@@ -470,6 +520,15 @@ footer > p {
 
     footer {
         width: 100%;
+    }
+    .visible {
+        width: 100%;
+        margin: 0 auto;
+        background-color: white;
+        line-height: 30px;
+        text-align: justify;
+        border-radius: var(--sch-border-radius-s);
+        padding: var(--sch-padding-s);
     }
 }
 
