--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&family=Mulish:wght@300&family=Oswald:wght@500&family=Raleway&family=Rubik:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:wght@100;300&family=Mulish:wght@300&family=Oswald:wght@500&family=Raleway&family=Rubik:wght@400;500&display=swap');
 
 * {
     margin: 0;
@@ -17,7 +17,8 @@ h1, h2, h3, h4, h5, h6, p, label, span, a {
     font-family: 'Mulish', sans-serif;
     font-family: 'Oswald', sans-serif;
     font-family: 'Raleway', sans-serif; */
-    font-family: 'Rubik', sans-serif;
+    /* font-family: 'Rubik', sans-serif; */
+    font-family: 'Inter', sans-serif;
 }
 
  /* Variables */
