--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ h1, h2, h3, h4, h5, h6, p, label, span, a {
     /* font-family: 'Montserrat', sans-serif; */
     /* font-family: 'Mulish', sans-serif; */
     /* font-family: 'Oswald', sans-serif; */
-    font-family: 'Raleway', sans-serif;
+    /* font-family: 'Raleway', sans-serif; */
     /* font-family: 'Rubik', sans-serif; */
-    /* font-family: 'Inter', sans-serif; */
+    font-family: 'Inter', sans-serif;
 }
 
  /* Variables */
