--- a/style.css
+++ b/style.css
@@ -41,7 +41,12 @@ h1 {
     font-weight: bolder;
 }
 
-h2, h3, h4, h5, h6, p, label, span, a {
+h2{
+    font-family: 'Inter', sans-serif;
+    font-weight: normal;
+}
+
+h3, h4, h5, h6, p, label, span, a {
     font-family: 'Inter', sans-serif;
     font-weight: normal;
 }
