fetch: more changes in css

--- a/style.css
+++ b/style.css
@@ -141,10 +141,10 @@ h3, h4, h5, h6, p, label, span, a {
 
 .btn-hero {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     justify-items: center;
     align-items: center;
-    width: 300px;
+    width: 350px;
     min-width: 200px;
     cursor: pointer;
     transition: all 0.5s;
@@ -158,7 +158,7 @@ h3, h4, h5, h6, p, label, span, a {
 }
 
 .btn-hero > img {
-    width: 20%;
+    width: 15%;
     object-fit: cover;
 }
 .btn-hero > p {
