--- a/style.css
+++ b/style.css
@@ -564,11 +564,12 @@ footer > p {
     #hero {
         height: 100vh;
     }
-    #hero.flex-container-column {   
-        gap: var(--sch-gap-s);
+    #hero.flex-container-column {
         height: 100vh;
         align-items: center;
         justify-content: space-evenly;
+        margin-top: -40px;   
+        gap: var(--sch-gap-s);
     }
     
     #hero > h1 {
