--- a/style.css
+++ b/style.css
@@ -565,10 +565,10 @@ footer > p {
         height: 100vh;
     }
     #hero.flex-container-column {
+        width: 100%;
         height: 100vh;
         align-items: center;
         justify-content: space-evenly;
-        margin-top: -40px;   
         gap: var(--sch-gap-s);
     }
     
