--- a/style.css
+++ b/style.css
@@ -568,8 +568,7 @@ footer > p {
         width: 100%;
         height: 100vh;
         align-items: center;
-        justify-content: space-evenly;
-        gap: var(--sch-gap-s);
+        gap: var(--sch-gap-xl);
     }
     
     #hero > h1 {
