--- a/style.css
+++ b/style.css
@@ -568,7 +568,8 @@ footer > p {
         width: 100%;
         height: 100vh;
         align-items: center;
-        gap: var(--sch-gap-xl);
+        justify-content: space-evenly;
+        gap: var(--sch-gap-s);
     }
     
     #hero > h1 {
