--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ h2{
 h3, h4, h5, h6, p, label, span, a {
     font-family: 'Inter', sans-serif;
     font-weight: normal;
+    text-decoration: none;
+    color: var(--sch-color-100);
 }
 
  /* Variables */
@@ -142,7 +144,7 @@ h3, h4, h5, h6, p, label, span, a {
 
 .btn-hero {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     justify-items: center;
     align-items: center;
     width: 350px;
@@ -159,12 +161,10 @@ h3, h4, h5, h6, p, label, span, a {
 }
 
 .btn-hero > img {
-    width: 15%;
+    width: 10%;
     object-fit: cover;
 }
 .btn-hero > p {
-    width: 80%;
-    text-align: center;
     font-size: var(--sch-font-size-s);
 }
 
@@ -536,7 +536,7 @@ footer > p {
     }
     
     .btn-hero > img {
-        width: 20%;
+        width: 10%;
         object-fit: cover;
     }
     .btn-hero > p {
@@ -585,13 +585,14 @@ footer > p {
     .btn-hero {
         width: 300px;
         height: 60px;
+        justify-content: space-evenly;
         padding: var(--sch-padding-m);
     }
 
     .btn-hero > img{
-        width: 30px;
+        width: 25px;
     }
-
+    
     section.flex-container-row > img {
         width: 100%;
         min-width: 0px;
