--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ h3, h4, h5, h6, p, label, span, a {
     width: 100%;
     height: 100vh;
     background-image: url('assets/img/img-1.jpg'); 
+    opacity: 1;
     background-size: cover;
     background-position: center;
     padding: var(--sch-padding-xl);
