--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h3, h4, h5, h6, p, label, span, a {
         --sch-margin-xl:40px;
 
         --sch-padding-s: 5px;
+        --sch-special-padding: 10px;
         --sch-padding-m: 20px;
         --sch-padding-l: 50px;
         --sch-padding-xl: 150px;
@@ -426,7 +427,19 @@ section.flex-container-row > div > p {
     color: var(--sch-color-sand-004);
 }
 
-.plan-button-container > button {
+button#btn-open-modal {
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.5s;
+    font-size: var(--sch-font-size-xs);
+    padding: var(--sch-padding-s) var(--sch-padding-l);
+    background-color: var(--sch-color-000);
+    color: var(--sch-color-sand-004);
+    border: 1px solid var(--sch-color-sand-004);
+    border-radius: var(--sch-border-radius-l);
+}
+
+/* .plan-button-container > button {
     width: 50%;
     text-align: center;
     cursor: pointer;
@@ -441,7 +454,66 @@ section.flex-container-row > div > p {
 
 .plan-button-container > button:hover {
     transform: scale(1.07);
+} */
+
+/* Estilos para el modal free */
+
+#modal-free-suscription {
+    margin: auto; 
+    width: 60%; 
+    height: 60%;   
+    border: none;
+    background-image: url("./assets/img/imagen-plan.jpeg");
+    border-radius: var(--sch-border-radius-s);
 }
+
+#modal-free-suscription::backdrop {
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+div.flex-dialog {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#form-container {
+    width: 50%;    
+    max-width: 400px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9));
+    padding: var(--sch-padding-m);
+}
+
+#form-subscription-free {
+    display: flex;
+    flex-direction: column;
+    gap: var(--sch-gap-m);
+}
+
+#form-subscription-free > input {
+    border: none;
+    padding: var(--sch-special-padding) var(--sch-padding-m);
+    border-radius: var(--sch-border-radius-l);
+}
+
+#form-subscription-free > button {
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.5s;
+    font-size: var(--sch-font-size-xs);
+    padding: var(--sch-padding-s) var(--sch-padding-l);
+    background-color: var(--sch-color-000);
+    color: var(--sch-color-sand-004);
+    border: 1px solid var(--sch-color-sand-004);
+    border-radius: var(--sch-border-radius-l);
+}
+
 
 /* FAQ */
 #faq {
